# bartlby-agent

./: .gitignore  .travis.yml  HOWTO.passive  Makefile  Makefile.am  agent.c  agent_v2.c  bartlby_agent.h  bartlby_v2_dh.c  checkinstall.sh  cmd.c  compat.c  config.c  configure.ac  global.c
debian/: bartlby-agent.doc-base.EX  changelog  conffiles  control  files  postinst  rules
debian/bartlby-agent/DEBIAN/: control  md5sums
travis/: build_check.sh  compile.sh
